# wanda-runner

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
tests/: test_run_tests.py
wanda_runner/: app.py  settings.py
wanda_runner/controllers/: run_tests_controller.py
wanda_runner/runner/: process_runner.py
wanda_runner/schemas/: run_tests_dto.py
wanda_runner/services/: run_tests_service.py
